<resources>
    <string name="app_name">Hệ thống bán hàng</string>
    <string name="title_activity_store">StoreActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="activeStore">Đang hoạt động</string>
    <string name="inActiveStore">Không hoạt động</string>
    <string name="addEmployeeMenu">Thêm nhân viên</string>
    <string name="addStoreMenu">Thêm cửa hàng</string>
    <string name="text_hint_phone_numb">SĐT</string>
    <string name="text_hint_address">Địa chỉ cửa hàng</string>
    <string name="text_hint_store_name">Tên cửa hàng</string>
    <string name="is_active_label_text">Đang hoạt động</string>
    <string name="text_hint_username">Tên Đăng Nhập</string>
    <string name="text_hint_employee_name">Tên Nhân Viên</string>
    <string name="storeNameMaximumSizeExceeded">Tên cửa hàng không được dài hơn 50 ký tự!</string>
    <string name="requiredTextIsEmpty">\u0020không được để trống!</string>
    <string name="title_user_list">Users</string>
    <string name="title_user_detail">User Detail</string>
    <string name="activity_settings_name">Cài đặt</string>
    <string name="confirm_dialog_text">ĐỒNG Ý</string>
    <string name="progress_waiting">Ứng dụng đang tải dữ liệu</string>
    <string name="app_title">Hệ Thống Quản Lý Cửa Hàng</string>
    <string name="menu_new_order">Bán Hàng</string>
    <string name="menu_report">Báo Cáo</string>
    <string name="menu_customers">Khách Hàng</string>
    <string name="menu_products">Sản Phẩm</string>
    <string name="menu_export">Xuất Kho</string>
    <string name="menu_import">Nhập Kho</string>
    <string name="menu_return_order">Trả Hàng</string>
    <string name="navigation_drawer_close">Close Nav Bar</string>
    <string name="navigation_drawer_open">Open Nav Bar</string>
    <string name="search_product_hint"><i>Tìm sản phẩm theo tên, mã SKU, mã vạch</i></string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="activity_products_name">Sản Phẩm</string>
    <string name="product_list_title">Danh sách mặt hàng</string>
    <string name="empty_product_list">Không có sản phẩm nào được tìm thấy.</string>
    <string name="product_detail_title">Thông tin sản phẩm</string>
    <string name="product_detail_name_label">Tên:\u0020</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="product_detail_wholesale_label">Giá bán sỉ:\u0020</string>
    <string name="product_detail_retail_label">Giá bán lẻ:\u0020</string>
    <string name="product_detail_import_label">Giá nhập:\u0020</string>
    <string name="product_detail_instock_label">Số lượng:\u0020</string>
    <string name="product_detail_SKU_label">SKU:\u0020</string>
    <string name="product_detail_barcode_label">Barcode:\u0020</string>
    <string name="product_detail_unit_label">Đơn vị:\u0020</string>
    <string name="product_detail_category_label">Loại:\u0020</string>
    <string name="product_detail_brand_label">Nhãn hiệu:\u0020</string>
    <string name="product_detail_status_label">Trạng thái:\u0020</string>
    <string name="product_detail_desc_title">Miêu tả</string>
    <string name="product_detail_subproduct_title">Phiên Bản</string>
    <string name="product_isActive_true">Đang bán</string>
    <string name="product_isActive_false">Ngừng bán</string>
    <string name="product_price_zero">Xem phiên bản</string>
    <string name="action_get_all">Tìm Tất Cả</string>
    <string name="search_product_label">Tìm sản phẩm</string>
    <string name="product_detail_hint">Chọn một sản phẩm từ danh sách để xem chi tiết.</string>
    <string name="sub_product_list_empty">Không có phiên bản nào cho sản phẩm này</string>
    <string name="product_basic_info_label">Thông tin cơ bản</string>
    <string name="product_info_name">Tên sản phẩm</string>
    <string name="product_code_label">Mã</string>
    <string name="sku_input_hint">Mã SKU (hệ thống sẽ tự tạo nếu để trống)</string>
    <string name="barcode_input_hint">Mã vạch</string>
    <string name="product_price_label">Giá và số lượng</string>
    <string name="product_unit_hint">Đơn vị</string>
    <string name="import_price_hint">Giá nhập</string>
    <string name="retail_price_hint">Giá bán lẻ</string>
    <string name="wholesale_price_hint">Giá bán sỉ</string>
    <string name="product_desc_label">Mô tả</string>
    <string name="product_detail_info_label">Thông tin chi tiết</string>
    <string name="is_active_label">Đang bán</string>
    <string name="unit_label">Đơn vị</string>
    <string name="brand_label">Nhãn hiệu</string>
    <string name="category_label">Loại hàng</string>
    <string name="unique_edition_price">Đồng giá các phiên bản</string>
    <string name="quantity_hint">Số Lượng</string>
    <string name="data_loading_message">Hệ thống đang xử lý dữ liệu</string>
    <string name="product_image">Product Image</string>
    <string name="order_quantity_hint">Số lượng</string>
    <string name="order_product_title">Chọn hàng</string>
    <string name="activity_selling_name">Bán hàng</string>
    <string name="add">Thêm</string>
    <string name="order_title_label">Đơn hàng (%d)</string>
    <string name="order_done_button_label">Hoàn tất</string>
    <string name="order_save_button_label">Lưu đơn</string>
    <string name="order_add_not_selected_warning">Hãy chọn một mặt hàng để thêm vào đơn hàng</string>
    <string name="REST_fail">Không thể kết nối tới server.\nLỗi kết nối, xin hãy kiểm tra lại đường truyền hoặc liên lạc với người điều hành server.</string>
    <string name="order_total">Tổng giá: %s\u0020&lt;u>đ&lt;/u></string>
    <string name="order_complete_pay">Thanh toán</string>
    <string name="payment_cash">Thanh toán bằng tiền mặt</string>
    <string name="payment_card">Thanh toán bằng thẻ</string>
    <string name="payment_code">Thanh toán bằng mã QR</string>
    <string name="orderListNameColumnLabel"><i>Tên hàng</i></string>
    <string name="orderListPriceColumnLabel"><i>Đơn giá</i></string>
    <string name="orderListQuantityColumnLabel"><i>Số lượng</i></string>
    <string name="orderListSubTotalColumnLabel"><i>Thành tiền</i></string>
    <string name="order_barcode_invalid">Barcode không tồn tại trong cơ sở dữ liệu!</string>
    <string name="order_complete_dialog_title">HOÀN TẤT ĐƠN HÀNG</string>
    <string name="empty_order_warning">Đơn hàng trống!</string>
    <string name="order_complete_message">Lưu lại đơn hoặc bắt đầu thanh toán</string>
    <string name="order_payment_cash_received">Tiền nhận:\u0020</string>
    <string name="order_payment_cash_received_suffix">\u002<u>đ</u></string>
    <string name="order_payment_cash_change">Tiền thừa: %s\u0020&lt;u>đ&lt;/u></string>
    <string name="order_payment_cash_label">Tiền mặt</string>
    <string name="order_payment_card_label">Thẻ</string>
    <string name="order_payment_code_label">Mã QR</string>
    <string name="order_payment_cash_received_invalid">Số tiền nhận chưa đủ</string>
    <string name="order_payment_complete">Hoàn thành</string>
    <string name="order_payment_cancel">Huỷ</string>
    <string name="saved_orders_label">Đơn hàng đã lưu</string>
    <string name="past_order_name">Đơn hàng %s</string>
    <string name="past_orders_total_price">Tổng tiền: %s\u0020&lt;u>đ&lt;/u></string>
    <string name="pastOrderDate">%s</string>
    <string name="resume_order">Tiếp tục đơn hàng</string>
    <string name="product_detail_store_quantity">Số lượng:\\u0020%s</string>
    <string name="store_instock">%s món trong kho</string>
    <string name="store_name">Cửa hàng %s</string>
    <string name="vnd_currency"><u>đ</u></string>
    <string name="bold_1"><b>1</b></string>
    <string name="bold_2"><b>2</b></string>
    <string name="bold_3"><b>3</b></string>
    <string name="bold_4"><b>4</b></string>
    <string name="bold_5"><b>5</b></string>
    <string name="bold_6"><b>6</b></string>
    <string name="bold_7"><b>7</b></string>
    <string name="bold_8"><b>8</b></string>
    <string name="bold_9"><b>9</b></string>
    <string name="bold_00"><b>00</b></string>
    <string name="bold_000"><b>000</b></string>
    <string name="bold_0"><b>0</b></string>
    <string name="activity_return_name">Trả hàng</string>
    <string name="username_hint">Tên đăng nhập</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="login_button_hint">Đăng nhập</string>
    <string name="menu_side_logout">Đăng Xuất</string>
    <string name="action_bar_label_cashier">Thu Ngân: %s</string>
    <string name="product_detail_at_store"><i>Tại cửa hàng</i></string>
</resources>
