<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:padding="12dp">
    <ImageView
        android:id="@+id/imageCash"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_cash"/>
    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageCash"
        app:layout_constraintStart_toStartOf="@id/received"
        style="@style/Overline"
        android:textAllCaps="false"
        android:layout_marginStart="0dp"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:text="@string/order_total"/>
    <TextView
        android:id="@+id/received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/order_payment_cash_received"
        style="@style/Overline"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:layout_marginStart="0dp"/>
    <TextView
        android:id="@+id/receivedInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/received"
        app:layout_constraintBaseline_toBaselineOf="@id/received"
        style="@style/Overline"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:letterSpacing="0.1"/>
    <TextView
        android:id="@+id/receivedSuffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintStart_toEndOf="@id/receivedInput"
        android:text="@string/order_payment_cash_received_suffix"
        style="@style/Overline"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:layout_marginStart="0dp"/>
    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/received"
        app:layout_constraintStart_toStartOf="@id/received"
        style="@style/Overline"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginStart="0dp"
        android:letterSpacing="0.1"
        android:text="@string/order_payment_cash_change"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="55dp">
        <Button
            android:id="@+id/button_1"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:text="@string/bold_1"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/button_2"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_1"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/bold_2"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/button_3"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_2"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/bold_3"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/button_4"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:text="@string/bold_4"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/button_5"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintStart_toEndOf="@id/button_4"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/bold_5"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintStart_toEndOf="@id/button_5"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/bold_6"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/button_7"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/button_4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:text="@string/bold_7"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/button_8"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/button_4"
            app:layout_constraintStart_toEndOf="@id/button_7"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/bold_8"
            style="@style/NumberButton"/>

        <Button
            android:id="@+id/button_9"
            style="@style/NumberButton"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/bold_9"
            app:layout_constraintStart_toEndOf="@id/button_8"
            app:layout_constraintTop_toBottomOf="@id/button_4" />
        <Button
            android:id="@+id/button_000"
            android:layout_width="100dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/button_7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:text="@string/bold_000"
            style="@style/NumberButton"/>

        <Button
            android:id="@+id/button_00"
            style="@style/NumberButton"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/bold_00"
            app:layout_constraintStart_toEndOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@id/button_7" />

        <Button
            android:id="@+id/button_0"
            style="@style/NumberButton"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/bold_0"
            app:layout_constraintStart_toEndOf="@+id/button_000"
            app:layout_constraintTop_toBottomOf="@id/button_7" />
        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/button_backspace"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_3"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:scaleType="center"
            android:src="@drawable/ic_backspace"
            android:tint="@color/white"
            style="@style/NumberButton"/>

    </android.support.constraint.ConstraintLayout>
    <View
        android:id="@+id/vertical_center_anchor"
        android:layout_width="1px"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        style="@style/LongNegativeFloatingActionButton"
        android:drawablePadding="0dp"
        android:drawableStart="@drawable/ic_close"
        android:text="@string/order_payment_cancel"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/done"
        style="@style/LongFloatingActionButton"
        android:text="@string/order_save_button_label"
        android:drawableStart="@drawable/ic_save"/>
    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/LongAccentFloatingActionButton"
        android:text="@string/order_done_button_label"
        android:drawableStart="@drawable/ic_done"/>

</android.support.constraint.ConstraintLayout>