<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/productDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Header6"
        android:text="@string/product_detail_title"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:src="@mipmap/ic_placeholderimage"
        app:layout_constraintTop_toBottomOf="@id/productDetailName"
        app:layout_constraintStart_toStartOf="@id/productDetailName"
        android:layout_marginTop="12dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        app:layout_constraintStart_toEndOf="@id/productImage"
        app:layout_constraintTop_toBottomOf="@id/productDetailName"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp">

        <TextView
            android:id="@+id/productDetailRetailPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_retail_label"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailRetailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailRetailPriceLabel"
            android:layout_alignBaseline="@id/productDetailRetailPriceLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailWholesalePriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_wholesale_label"
            android:layout_below="@id/productDetailRetailPriceLabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailWholesalePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailRetailPriceLabel"
            android:layout_alignBaseline="@id/productDetailWholesalePriceLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailImportPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_import_label"
            android:layout_below="@id/productDetailWholesalePriceLabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailImportPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailRetailPriceLabel"
            android:layout_alignBaseline="@id/productDetailImportPriceLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailInStockLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_instock_label"
            android:layout_below="@id/productDetailImportPriceLabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailInStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailRetailPriceLabel"
            android:layout_alignBaseline="@id/productDetailInStockLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailSKULabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_SKU_label"
            android:layout_below="@id/productDetailInStockLabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailSKU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailRetailPriceLabel"
            android:layout_alignBaseline="@id/productDetailSKULabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_category_label"
            android:layout_below="@id/productDetailSKULabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailRetailPriceLabel"
            android:layout_alignBaseline="@id/productDetailCategoryLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:id="@+id/middleConstraint"
            android:layout_toEndOf="@id/productDetailRetailPrice"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/productDetailStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_status_label"
            android:layout_below="@id/productDetailWholesalePriceLabel"
            android:layout_toEndOf="@id/middleConstraint"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailStatusLabel"
            android:layout_alignBaseline="@id/productDetailStatusLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailUnitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_unit_label"
            android:layout_toEndOf="@id/middleConstraint"
            android:layout_below="@id/productDetailImportPriceLabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailStatusLabel"
            android:layout_alignBaseline="@id/productDetailUnitLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailBarcodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_barcode_label"
            android:layout_toEndOf="@id/middleConstraint"
            android:layout_below="@id/productDetailInStockLabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailStatusLabel"
            android:layout_alignBaseline="@id/productDetailBarcodeLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/productDetailBrandLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail_brand_label"
            android:layout_toEndOf="@id/middleConstraint"
            android:layout_below="@id/productDetailBarcodeLabel"
            style="@style/Subtitle2"/>
        <TextView
            android:id="@+id/productDetailBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:layout_toEndOf="@id/productDetailStatusLabel"
            android:layout_alignBaseline="@id/productDetailBrandLabel"
            style="@style/TextAppearance.AppCompat.Body2"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/productDescTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/productImage"
        app:layout_constraintStart_toStartOf="@id/productDetailName"
        style="@style/Subtitle1"
        android:layout_marginTop="6dp"
        android:text="@string/product_detail_desc_title"/>
    <TextView
        android:id="@+id/productDesc"
        android:layout_width="425dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/productDescTitle"
        app:layout_constraintStart_toStartOf="@id/productDetailName"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.  Aliquam erat volutpat. Donec placerat nisl magna, et "
        style="@style/TextAppearance.AppCompat.Body1"
        android:paddingBottom="12dp"/>

    <TextView
        android:id="@+id/subProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/productDesc"
        app:layout_constraintStart_toStartOf="@id/productDetailName"
        style="@style/Subtitle1"
        android:text="@string/product_detail_subproduct_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subProductEmpty"
        app:layout_constraintTop_toBottomOf="@id/productDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sub_product_list_empty"
        style="@style/Overline"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/subProductListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/subProductTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="2dp">
    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>